team section carousel done

--- a/index.html
+++ b/index.html
@@ -715,9 +715,9 @@
         <h4 class="text-muted my-4">
           we have considered our solutions to support every stage of your growth
         </h4>
-        <div class="row px-2 button-sec justify-content-center">
-          <button class="col-4 me-2 btns btn-exp flex-grow-1">Explore Now</button>
-          <button class="col-4 ms-2 btns btn-free flex-grow-1"> Free Trail</button>
+        <div class="row px-2 button-sec ">
+          <button class="col-4 me-2 btns btn-exp ">Explore Now</button>
+          <button class="col-4 ms-2 btns btn-free"> Free Trail</button>
         </div>
       </div>
       <div class="col-md-7 video-eff" >
@@ -960,7 +960,8 @@
           <div class="dot"></div>
           <div class="dot"></div>
           <div class="dot"></div>
-
+          <div class="dot mobile"></div>
+          <div class="dot mobile"></div>
         </div>
       </div>
     </div>
@@ -1021,10 +1022,11 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo quis, adipisci inventore alias quod eum?
         </div>
         <div>
-          <button class="btn btn-exp" style="width: fit-content; font-weight: bold; padding: 14px 20px; margin: 15px auto;">See All Members</button>
+          <button class="btn btn-exp" style="width: fit-content;border-radius: 60px; font-weight: bold; padding: 14px 20px; margin: 15px auto;">See All Members</button>
         </div>
       </div>
       <div class="col-md-9">
+        <div class="team-carousel">
           <div class="" id="cards">
             <div class="indi-card">
               <div class="img-contain">
@@ -1041,13 +1043,17 @@
               </div>
               <div class="social">
                 <div class="twitter">
-                  <a href="#"></a>
+                  <a href="#" style="color: rgb(8,160,233)"><i class="fab fa-twitter"></i></a>
                 </div>
                 <div class="slack">
-                  <a href="#"></a>
+                  <a href="#" style="color:rgb(221, 42,123)">
+                    <i class="fab fa-slack"></i>
+                  </a>
                 </div>
                 <div class="linkedin">
-                  <a href="#"></a>
+                  <a href="#" style="color: rgb(8,160,233)">
+                    <i class="fab fa-linkedin"></i>
+                  </a>
                 </div>
               </div>
             </div>
@@ -1066,13 +1072,17 @@
               </div>
               <div class="social">
                 <div class="youtube">
-                  <a href="#"></a>
+                  <a href="#" style="color: rgb(230,33,23)">
+                    <i class="fab fa-youtube"></i>
+                  </a>
                 </div>
                 <div class="facebook">
-                  <a href="#"></a>
+                <a href="#" style="color: rgb(59,90,154)">
+                    <i class="fab fa-facebook-f"></i>
+                  </a>
                 </div>
                 <div class="dribble">
-                  <a href="#"></a>
+                  <a href="#" style="color:rgb(235, 207,179)"><i class="fas fa-basketball-ball"></i></a>
                 </div>
               </div>
             </div>
@@ -1091,13 +1101,19 @@
               </div>
               <div class="social">
                 <div class="linkedin">
-                  <a href="#"></a>
+                  <a href="#" style="color: rgb(8,160,233)">
+                    <i class="fab fa-linkedin"></i>
+                  </a>
                 </div>
                 <div class="slack">
-                  <a href="#"></a>
+                  <a href="#" style="color:rgb(221, 42,123)">
+                    <i class="fab fa-slack"></i>
+                  </a>
                 </div>
                 <div class="facebook">
-                  <a href="#"></a>
+                  <a href="#" style="color: rgb(59,90,154)">
+                    <i class="fab fa-facebook-f"></i>
+                  </a>
                 </div>
               </div>
             </div>
@@ -1116,13 +1132,15 @@
               </div>
               <div class="social">
                 <div class="twitter">
-                  <a href="#"></a>
+                  <a href="#" style="color: rgb(8,160,233)"><i class="fab fa-twitter"></i></a>
                 </div>
                 <div class="facebook">
-                  <a href="#"></a>
+                  <a href="#" style="color: rgb(59,90,154)">
+                    <i class="fab fa-facebook-f"></i>
+                  </a>
                 </div>
                 <div class="dribble">
-                  <a href="#"></a>
+                  <a href="#" style="color:rgb(235, 207,179)"><i class="fas fa-basketball-ball"></i></a>
                 </div>
               </div>
             </div>
@@ -1141,17 +1159,29 @@
               </div>
               <div class="social">
                 <div class="facebook">
-                  <a href="#"></a>
+                  <a href="#" style="color: rgb(59,90,154)">
+                    <i class="fab fa-facebook-f"></i>
+                  </a>
                 </div>
                 <div class="slack">
-                  <a href="#"></a>
+                  <a href="#" style="color:rgb(221, 42,123)">
+                    <i class="fab fa-slack"></i>
+                  </a>
                 </div>
                 <div class="dribble">
-                  <a href="#"></a>
+                  <a href="#" style="color:rgb(235, 207,179)"><i class="fas fa-basketball-ball"></i></a>
                 </div>
               </div>
             </div>
+          </div>
         </div>
+          <div class="dots-team">
+            <div class="dot active"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot mobile"></div>
+            <div class="dot mobile"></div>
+          </div>
       </div>
     </div>
 
