added comments for better readability of code

--- a/index.html
+++ b/index.html
@@ -4,18 +4,25 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0,minimum-scale=1">
-  <title>Document</title>
+  <title>Web of Wars</title>
   
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
+  <!-- Font awesome CDN -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">        
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
+
+  <!-- Import css file -->
   <link rel="stylesheet" href="styles.css">
   
+  <!-- Boostrap CDN -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ" crossorigin="anonymous"></script>
+  
+  <!-- Import js file -->
   <script src="script.js" defer></script>
 
 </head>
 <body>
+  <!-- Navbar -->
     <nav id="column_left" >	
     <span id='close-sidebar' class='fa fa-times-thin fa-3x' style="float:right;padding-right:6px;"></span>
     <ul class="nav nav-list">
@@ -701,12 +708,15 @@
             <span></span>
         </button>
     </nav>
+  <!-- Move to top Icon -->
   <div class="move-top">
     <a href="#top" style="width: 100%; height: 100%; display: flex;justify-content: center; align-items: center; text-decoration: none;">
       <i class="fas fa-arrow-up"></i>
     </a>
   </div>
+  <!-- Body Content -->
   <div class="container m-auto mt-4">
+    <!-- Main section(sec 1) -->
     <div class="row justify-content-evenly align-items-center flex-column-reverse flex-md-row">
       <div class="col-md-5 video-eff" >
         <h1 class="mb-4 display-6 fw-bold text-muted">We bring solutions to make life easier for our customers.</h1>
@@ -725,6 +735,7 @@
 
       </div>
     </div>
+    <!-- Brands section (sec 2) -->
     <div class="brands row justify-content-center align-items-center">
       <div class="col-md-6 row">
         <div class="col-4">
@@ -749,6 +760,7 @@
         </div>
       </div>
     </div>
+    <!-- What we do section (sec 3) -->
     <div class="what-we-do row">
       <div class="row text-muted text-center">
           <p class="text-center fw-bold">WHAT WE DO?</p>
@@ -827,6 +839,7 @@
 
       </div>
     </div>
+    <!-- How it works section (sec 4) -->
     <div class="how-it-works row justify-content-evenly align-items-center">
       <div class="col-md-6 how-it-first-col" >
         <div class="section-4-illus">
@@ -891,7 +904,7 @@
           </div>
       </div>
     </div>
-
+    <!-- Latest Projects Sections (sec 5) -->
     <div class="latest-projects">
       <div class="row text-muted text-center">
         <p class="text-center fw-bold">LATEST PROJECTS</p>
@@ -963,6 +976,7 @@
         </div>
       </div>
     </div>
+    <!-- Who are we section (sec 6) -->
     <div class="row who-are-we" style="margin:70px auto ">
       <div class="col-md-6 about-img">
         <div class="img-contain" style="position: relative; text-align: center;">
@@ -1006,6 +1020,7 @@
         </div>
       </div>
     </div>
+    <!-- Team Section (sec 7) -->
     <div class="row team-sec">
       <div class="col-md-3">
         <div class="row text-muted">
@@ -1183,7 +1198,7 @@
       </div>
     </div>
 
-
+    <!-- Review Section sec(8) -->
     <div class="row last-sec justify-content-center align-items-center" style="margin:70px auto;">
       <div class="col-md-4 chuppa">
         <div class="img-outer text-center">
@@ -1209,6 +1224,7 @@
         </div>
       </div>  
     </div>
+    <!-- Footer sec(9) -->
     <footer class="row footer my-md-4">
       <div class="col-md-3">
         <div class="my-4">
@@ -1279,8 +1295,9 @@
   
 
 
+  <!-- Jquery and Bootstrap scripts -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
